# pl-safari

./: .gitignore  README.md  dune-project  pl-safari.opam
.github/workflows/: ocaml.yaml
lib/: dune
lib/common/: dune  error.ml  parsing.ml
lib/lambda/: README.md  desugar.ml  dune  interpreter.ml  ir.ml  lexer.mll  parser.mly  print.ml  syntax.ml
scripts/hooks/: pre-commit
test/: dune
test/lambda/: dune  test_parsing.ml
test/lambda/cases/syntax_error/: invalid-var.lambda
test/lambda/cases/valid/: abstraction.lambda  application.lambda  assignment.lambda  mixed.lambda  var.lambda
