(lang dune 3.20)

(name pl-safari)

(generate_opam_files true)

(source
 (github JamesLee-Jones/pl-safari))

(authors "James Lee-Jones <james'at'lee-jones.co.uk>")

(maintainers "James Lee-Jones <james'at'lee-jones.co.uk>")

(license Apache-2.0)

(package
 (name pl-safari)
 (synopsis "Implementations of small programming language")
 (description "A collection of small implementations of programming languages, static analyses, and compiler testing tools.")
 (depends ocaml)
 (tags
  ("programming languages" "compilers" "interpreters" "static analysis" your project)))

